test_run_output.log
   Compiling freenet v0.1.4 (/home/ian/code/freenet/freenet-core/debug-update-issues/crates/core)
error[E0282]: type annotations needed
   --> crates/core/src/node/p2p_impl.rs:139:18
    |
139 |                 &HashSet::new(),
    |                  ^^^^^^^^^^^^ cannot infer type of the type parameter `T` declared on the struct `HashSet`
    |
help: consider specifying the generic argument
    |
139 |                 &HashSet::<T>::new(),
    |                         +++++

For more information about this error, try `rustc --explain E0282`.
error: could not compile `freenet` (lib) due to 1 previous error
